@@ -16,13 +16,6 @@ install:
 sdist:
 	python setup.py sdist --formats=tar
 	7z a dist/canta-`cat VERSION`.tar.7z dist/canta-`cat VERSION`.tar
-deb:
-	python setup.py bdist_debian
-	-rm build -r
-
-rpm:
-	python setup.py bdist_rpm
-	-rm build -r
 
 exe:
 	cp media/canta.ico .
@@ -35,33 +28,16 @@ exe:
 
 
 md5:
-	-cd dist; md5sum *.7z canta*_all.deb *.exe > canta-`cat ../VERSION`.md5; fi
-
-release: sdist rpm deb exe md5
-	@echo "done"
-
-#fullrelease:
-	# either the makefile sets git-tag or the makefile reads tag for version?
-	# clean
-	# mount goal-ftp
-	# check dependencies
-	# make deb tgz rpm exe
-	# cp stuff to ftp
-	# clean up all the stuff
-	# dont forget checksums where needed
+	-cd dist; md5sum *.7z *.exe > canta-`cat ../VERSION`.md5; fi
 
 help:
 	@echo "\nMakefile options are:\n"
 	@echo "	clean:		clean temporary files"
 	@echo "	run:		to start canta"
-	@echo "	install		to install canta to /usr"
-	#@echo "	uninstall	bla"
-	@echo " sdist:          to generate a tar.gz archive or zip(windows)"
-	@echo "	deb:		to generate a debian paket"
-	@echo "	rpm:		to generate a redhat paket"
+	@echo "	install:	to install canta to /usr"
+	@echo "	sdist:		to generate a tar.gz archive or zip(windows)"
 	@echo "	exe:		to generate a windows installer"
 	@echo "			WARNING: u need to install stuff and edit"
 	@echo "			generate_win32_build.sh before it will work"
-	@echo "	release:	same as deb + rpm + exe"
 	@echo "\n"
 
