@@ -1,10 +1,0 @@
-[bdist_rpm]
-requires = python-soya >= 0.13, python >= 2.5, python-wxgtk >= 2.8, python-gst >= 0.10, python-configobj, python-mutagen
-# didnt define this dependency because it is not in distries so even if you install it apt-get will ask you to deinstall canta
-#, python-pyaudio >= 0.1
-
-[bdist_debian]
-depends = python-soya (>= 0.13), python (>= 2.5), python-wxgtk2.4 | python-wxgtk2.6 | python-wxgtk2.8, python-gst0.10, python-configobj, python-mutagen
-# didnt define this dependency because it is not in distries so even if you install it apt-get will ask you to deinstall canta
-#, python-pyaudio (>= 0.1)
-# python-imaging is a dependency of python-soya hmm but so is python we could delete it also i think.
